# cakeipsum-python

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/cakeipsum/: __init__.py  cli.py  generator.py  words.py
