[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cakeipsum"
version = "0.1.0"
description = "A cake/dessert-themed Lorem Ipsum generator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
keywords = ["lorem-ipsum", "placeholder", "text-generator", "cake", "dessert"]

[project.scripts]
cakeipsum = "cakeipsum.cli:main"

[project.urls]
Homepage = "https://github.com/austinogilvie/cakeipsum-python"
Repository = "https://github.com/austinogilvie/cakeipsum-python"

[tool.setuptools.packages.find]
where = ["src"]
